# somfy-uai-plus-telnet-py

./: README.md  pyproject.toml
src/somfy_uai_plus_telnet/: __init__.py  telnet_client.py
